# flightlogger

./: .gitignore  CMakeLists.txt  README.MD  configure_db.sh  flightlogger.cpp  flightlogger.hpp
test/: CMakeLists.txt  test_flightlogger.cpp
